--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html>
+
 <head>
-<!--
+    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 1
     
     Jedds Tree Care Home Page
-    Author: 
-    Date:   
+    Author: Trent Peterson
+    Date:8.21.18   
 
-    Filename: jtc_index.html
+    Filename: index.html
    -->
 
 </head>
