--- a/index.html
+++ b/index.html
@@ -13,10 +13,68 @@
 
     Filename: index.html
    -->
-
+    <!-- I set the charset as utf-8 as that is a widely exepted character set and the title as Jedds Tree Care because thats what Jedd wanted and the two stylesheets I linked to the page so it would not be dull -->
+    <meta charset="utf-8" />
+    <title>Jedds Tree Care</title>
+    <link rel="stylesheet" href="jtc_base.css">
+    <link rel="stylesheet" href="jtc_layout.css">
 </head>
 
 <body>
+    <header>
+        <!-- talked to Diego and we agreed we should put the hypertext in an unordered list and it looks different when we opened it into the default document-->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="services.html">Services</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- I added the aside. I put the image in the aside to mke it look better and put all of the quotes in blockquotes and the words of the quote in a p tag and the names of the people and the m-dashes inside of cite tags -->
+    <aside>
+        <img src="jtc_comments.png" alt="Specify Comments">
+        <blockquote>
+            <p>I hired Jedds to remove an old Sugar maple from a narrow yard. They did the job with no damage to my garage and
+                cleaned it all up that same day. Great service.</p>
+            <cite> &#8212; Kevin S (Dewitt) </cite>
+        </blockquote>
+        <blockquote>
+            <p>Jedds Tree Care promptly came to examine a downed tree and provide an estimate for its removal. They did the
+                job fast and at the lowest bid. I'll call them again without hesitation for future lawn and garden needs.
+            </p>
+            <cite> &#8212; Ann K (Stockbridge)</cite>
+        </blockquote>
+        <blockquote>
+            <p>Their team took down five trees in one day and did an immaculate clean-up. They took extra care not to disturb
+                my lawn and garden. I highly recommend their service. </p>
+            <cite> &#8212; David P (Lansing)</cite>
+        </blockquote>
+    </aside>
+    <!-- I put the different paragraphs in different p tags and added the image at the end. Put the adress in the adress tag with the email and phone # in hyperlink tags  -->
+    <article>
+        <header>
+            <img src="jtc_photo1.png" alt="Jedds Tree Care">
+        </header>
+        <p>Jedds Tree Care is a complete yard service including branch trimming, pruning, stump removal and emergency tree removal.
+            We offer same day emergency service 24/7. Jedds operates out of East Lansing, MI, but also serves the surrounding
+            counties for your urban and rural needs. We provide tree and yard care for both commercial and residential clients.
+            Customer satisfaction is our primary goal.</p>
+        <p>Our business is fully insured. Safety is our number one priority. We have professional arborists on staff to deal
+            with your special needs and we can handle any job, large or small.</p>
+        <address>
+            <strong>Jedds Tree Care</strong>
+            <br>201 Edward Ave.
+            <br>Lansing, MI 48930
+            <br> email:
+            <a href="mailto:jeddstree@example.com"> jeddstree@example.com </a>
+            <br> phone:
+            <a href="tel:15175554811">517.555.4811</a>
+        </address>
+    </article>
 
 </body>
 
