--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
         trees, shrubbery, and other greenery to enhance the natural beauty of your property and help you achieve your landscaping
         vision.
     </p>
-    <!-- For the footer I copied and pasted the text in it and the charcode acctually copied over as well and worked in the site but I changed it to the actual code. -->
+    <!-- For the footer I copied and pasted the text in it and the charcode acctually copied over as well and worked in the site but I changed it to the actual code. For example  ⬥ and that worked in the site when I opened it in a browser -->
     <footer>Jedds Tree Care &9830; 201 Edward Ave. &9830; Lansing, Mi 48930</footer>
 </body>
 
